# 2025-final-command-team-26-support_bot

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
films_bot/bot/: __init__.py  main.py
films_bot/bot/handlers/: start.py  support.py
films_bot/bot/keyboards/: main.py
films_bot/bot/states/: main.py
films_bot/config/: __init__.py
films_bot/db/: __init__.py  models.py
